--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -30,12 +30,19 @@
 /*--------------
 1.Theme default CSS
 --------------------------*/
+
+
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+
+
 body,
 html {
-	font-family: 'Roboto', sans-serif;
+	/* font-family: 'Roboto', sans-serif; */
+	font-family: "DM Sans", sans-serif;
 	font-size: 16px;
 	line-height: 23px;
-	color: #D3D3D5;
+	color: #251F14;
 	background: #170135;
 	font-weight: 400;
 	overflow-x: hidden;
@@ -393,7 +400,7 @@ h6,
 .h4,
 .h5,
 .h6 {
-	font-family: 'Roboto', sans-serif;
+	font-family: "Playfair Display", serif;
 	line-height: 1.1;
 	font-weight: 400;
 	color: #222222;
