--- a/public/frontend/scss/style.css
+++ b/public/frontend/scss/style.css
@@ -4947,6 +4947,14 @@ display: block;
 	padding-right: 20px;
 	background: transparent;
 }
+.hs_kd_six_sec_input_wrapper select {
+	width: 100%;
+	height: 50px;
+	border: 1px dashed #000;
+	padding-left: 20px;
+	padding-right: 20px;
+	background: transparent;
+}
 
 .hs_kd_six_sec_input_wrapper textarea {
 	width: 100%;
@@ -7390,7 +7398,7 @@ display: block;
 }
 
 .hs_contact_indx_form_main_wrapper.white-overlay-section .hs_kd_six_sec_input_wrapper input,
-.hs_contact_indx_form_main_wrapper.white-overlay-section .hs_kd_six_sec_input_wrapper textarea {
+.hs_contact_indx_form_main_wrapper.white-overlay-section .hs_kd_six_sec_input_wrapper textarea, .hs_contact_indx_form_main_wrapper.white-overlay-section .hs_kd_six_sec_input_wrapper select {
 	width: 100%;
 	height: 50px;
 	border: 1px dashed #251F14;
