--- a/public/frontend/scss/numerology.css
+++ b/public/frontend/scss/numerology.css
@@ -1,109 +1,117 @@
+.tab-container {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    margin-bottom: 10px;
+}
 
-        .tab-container {
-            position: relative;
-            display: flex;
-            gap: 10px;
-            margin-bottom: 10px;
-        }
+.tab-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    background-color: transparent;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+}
 
-        .tab-button {
-            padding: 10px 20px;
-            font-size: 16px;
-            border: none;
-            background-color: transparent;
-            cursor: pointer;
-            position: relative;
-            z-index: 1;
-        }
+.tab-button.active {
+    background-color: transparent;
+    color: #fff;
+}
 
-        .tab-button.active {
-            background-color: transparent;
-            color: #fff;
-        }
+.tab-container.second .tab-background {
+    background-color: #BA9A63;
+    color: #fff;
+}
 
-        .tab-container.second .tab-background {
-            background-color: #BA9A63;
-            color: #fff;
-        }
+.tab-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #f19CDA;
+    /* transition: width 0.3s, left 0.3s; */
+    border-radius: 20px;
+}
 
-        .tab-background {
-            position: absolute;
-            top: 0;
-            left: 0;
-            height: 100%;
-            background-color: #f19CDA;
-            /* transition: width 0.3s, left 0.3s; */
-            border-radius: 20px;
-        }
+.tab-content {
+    margin-top: 20px;
+    margin-bottom: 90px;
+}
 
-        .tab-content {
-            margin-top: 20px;
-            margin-bottom: 90px;
-        }
+.ta-tab-item {
+    display: none;
+    padding: 20px;
+    background-color: #fff;
+    border: 1px solid #ddd;
+}
 
-        .ta-tab-item {
-            display: none;
-            padding: 20px;
-            background-color: #fff;
-            border: 1px solid #ddd;
-        }
+.ta-tab-item.active {
+    display: block;
+}
 
-        .ta-tab-item.active {
-            display: block;
-        }
-        [data-tab-content] {
-            display: none;
-        }
+[data-tab-content] {
+    display: none;
+}
 
-        .active[data-tab-content] {
-            display: block;
-        }
+.active[data-tab-content] {
+    display: block;
+}
 
-        body {
-            padding: 0;
-            margin: 0;
-        }
+.tabs {
+    display: flex;
+    justify-content: center;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
 
-        .tabs {
-            display: flex;
-            justify-content: center;
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-        }
+.tab {
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 50px;
+    margin: 0 10px;
+}
 
-        .tab {
-            cursor: pointer;
-            padding: 10px;
-            border-radius: 50px;
-            margin: 0 10px;
-        }
+.tab.active {
+    background-color: #BA9A63;
+    color: #fff;
+}
 
-        .tab.active {
-            background-color: #BA9A63;
-            color: #fff;
-        }
+.tab.active:hover {
+    color: #fff;
+}
 
-        .tab.active:hover {
-            color: #fff;
-        }
+.tab:hover {
+    /* background-color: #AAA; */
+    color: #BA9A63;
 
-        .tab:hover {
-            /* background-color: #AAA; */
-            color: #BA9A63;
+}
 
-        }
+.tab-content {
+    margin-left: 20px;
+    margin-right: 20px;
+}
 
-        .tab-content {
-            margin-left: 20px;
-            margin-right: 20px;
-        }
-        .numerology-img{
-            width: 100%;
-            height: 100%;
-        }
-        .numerology-img img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
+.numerology-img {
+    width: 100%;
+    height: 100%;
+}
+
+.numerology-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius:0 20px;
+}
+
+.tab-content.right-content-part {
+    min-height: 500px;
+}
+.wht-mobile-n .subheading{
+color: #251F14;
+}
+.wht-mobile-n p.para{
+    color: #251F14;
+}
